[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmonpy"
version = "0.1.30"
authors = [{ name="Tom Burns", email="public@llmonpy.ai" }]
description = "AI pipeline framework for Python."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "google-generativeai",
    "openai",
    "mistralai",
    "anthropic",
    "fireworks-ai",
    "together",
    "groq",
    "nothingpy",
    "jinja2",
    "flask",
    "flask_cors",
    "matplotlib"
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
llmonpy = "llmonpy.llmonpy_cli:llmonpy_cli"
llmonpy_viewer = "llmonpy.api.api:run_api"

# Find packages in the src directory
[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/llmonpy/llmonpy"
Issues = "https://github.com/llmonpy/llmonpy/issues"
