[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rateLLMiter-ai"
version = "0.1.23"
authors = [{ name="Tom Burns", email="public@llmonpy.ai" }]
description = "LLM ratelimiter for Python."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib"
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
llmiter = "ratellmiter.rate_llmiter:ratellmiter_cli"

# Find packages in the src directory
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ratellmiter" = ["*.sh"]

[project.urls]
Homepage = "https://github.com/llmonpy/ratellmiter"
Issues = "https://github.com/llmonpy/ratellmiter/issues"
